// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../src/generated"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  STUDENT
  ALUMNI
}

enum ResourceCategory {
  NOTES
  PREVIOUS_YEAR_QUESTION
  ASSIGNMENT
  REFERENCE_BOOK
  OTHER
}

enum ConnectRequestStatus {
  PENDING
  APPROVED
  REJECTED
}

// User & Profile Models

model User {
  id         String   @id @default(cuid())
  rollNumber String   @unique
  email      String   @unique
  password   String
  fullName   String
  role       Role
  batch      String

  isActive Boolean @default(true)

  profile    Profile?
  resources  Resource[]
  driveResources  DriveResource[]
  placementOffers PlacementOffer[]
  interviews InterviewExperience[]

  connectRequestsSent     ConnectRequest[] @relation("ConnectRequestsSent")
  connectRequestsReceived ConnectRequest[] @relation("ConnectRequestsReceived")

  refreshToken String?
  resetPasswordToken String?
  resetPasswordExpires DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Profile {
  id         String  @id @default(cuid())
  avatarUrl  String?
  bio        String?
  github     String?
  leetcode   String?
  gfg        String?
  codeforces String?

  company        String?
  jobRole        String?
  location       String?
  tags           String[] @default([]) // skills/interest tags shown as badges
  graduationYear Int?
  linkedinUrl    String?
  openToConnect  Boolean  @default(false)

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model ConnectRequest {
  id      String               @id @default(cuid())
  message String?
  status  ConnectRequestStatus @default(PENDING)

  requesterId String
  requester   User @relation("ConnectRequestsSent", fields: [requesterId], references: [id], onDelete: Cascade)

  alumniId String
  alumni   User @relation("ConnectRequestsReceived", fields: [alumniId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([alumniId])
  @@index([requesterId])
  @@index([status])
}

enum ElectiveBasket {
  ELECTIVE_I
  ELECTIVE_II
  ELECTIVE_III
}

enum CourseType {
  THEORY
  SESSIONAL
}

enum SemesterTerm {
  BRIDGE
  SEM_1
  SEM_2
  SEM_3
  SEM_4
}

// Course & Resource Models

model Course {
  code            String           @id
  name            String           @unique

  resources       Resource[]
  elective        Elective?
  semesterMapping SemesterMapping?

  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
}

model SemesterMapping {
  id             String       @id @default(cuid())
  year           Int          // 0 = Bridge, 1 = 1st Year, 2 = 2nd Year
  semester       SemesterTerm // BRIDGE, SEM_1, SEM_2, SEM_3, SEM_4
  semesterNumber Int          // 0 = Bridge, 1, 2, 3, 4
  type           CourseType   @default(THEORY)

  // Periods / Weeks
  periodL        Int          @default(0) // Lecture periods/week
  periodT        Int          @default(0) // Tutorial periods/week
  periodP        Int          @default(0) // Practical periods/week

  // Marks Distribution
  examMarks      Int          @default(0) // Examination Marks
  sessionalMarks Int          @default(0) // Sessional Marks
  totalMarks     Int          @default(100) // Total Marks

  // Credit Points
  creditPoints   Int          @default(3) // Credit Points

  courseCode     String       @unique
  course         Course       @relation(fields: [courseCode], references: [code], onDelete: Cascade)

  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt

  @@index([year, semester])
  @@index([semesterNumber])
  @@index([type])
}

model Elective {
  id         String         @id @default(cuid())
  basket     ElectiveBasket
  semester   String         @default("3")
  courseCode String         @unique
  course     Course         @relation(fields: [courseCode], references: [code], onDelete: Cascade)

  createdAt  DateTime       @default(now())
  updatedAt  DateTime       @updatedAt

  @@index([basket])
}

model Resource {
  id          String           @id @default(cuid())
  title       String
  description String?
  fileUrl     String
  category    ResourceCategory
  approved    Boolean          @default(false)
  downloads   Int              @default(0)

  courseCode String
  course     Course           @relation(fields: [courseCode], references: [code])

  uploaderId String
  uploader   User             @relation(fields: [uploaderId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// Placement

model PlacementDrive {
  id          String   @id @default(cuid())
  companyId   String
  company     Company  @relation(fields: [companyId], references: [id])

  role        String
  driveDate   DateTime?
  minCTC      String?
  maxCTC      String?
  minCGPA     Float?
  description String?
  status      String              
  sector      String?             
  jd          String?  @db.Text  
  applyLink   String?             
  createdAt   DateTime @default(now())
  offers      PlacementOffer[]
  resources   DriveResource[]
}

enum OfferStatus {
  OFFERED
  REJECTED
}

model PlacementOffer {
  id        String         @id @default(cuid())
  driveId   String
  drive     PlacementDrive @relation(fields: [driveId], references: [id])

  userId    String
  user      User           @relation(fields: [userId], references: [id])
  
  status    OfferStatus    @default(OFFERED)
  ctc       String
  role      String

  @@index([driveId])
  @@index([userId])
  @@index([status])
}


model DriveResource {
  id         String         @id @default(cuid())
  driveId    String
  drive      PlacementDrive @relation(fields: [driveId], references: [id], onDelete: Cascade)
  uploadedBy String
  uploader   User           @relation(fields: [uploadedBy], references: [id])

  title      String
  fileUrl    String
  type       String         // "OA_PAPER" | "INTERVIEW_NOTES" | "JD" | "RESUME_TIPS" | "OTHER"
  createdAt  DateTime       @default(now())
}

// Company & Interview Experience Models

model Company {
  id      String @id @default(cuid())
  name    String @unique
  sector  String            // "PRODUCT" | "SERVICE" | "INTERNPPO"
  website String?
  logoUrl String?

  interviews InterviewExperience[]
  drives PlacementDrive[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model InterviewExperience {
  id        String  @id @default(cuid())
  role      String
  ctc       String?
  outcome   String
  narrative String
  approved  Boolean @default(false)

  companyId String
  company   Company @relation(fields: [companyId], references: [id])

  authorId String
  author   User   @relation(fields: [authorId], references: [id])

  rounds InterviewRound[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model InterviewRound {
  id          String  @id @default(cuid())
  roundName   String  // I was thinking it would be like "Online Assessment", "Technical 1", "HR"
  orderNumber Int     // Order of the round (like 1, 2, 3, etc)
  description String?

  interviewExperienceId String
  interviewExperience   InterviewExperience @relation(fields: [interviewExperienceId], references: [id], onDelete: Cascade)

  questions Question[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Question {
  id       String  @id @default(cuid())
  text     String
  solution String?

  roundId String
  round   InterviewRound @relation(fields: [roundId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
